<resources>
    <string name="app_name">PelisYSeriesApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo">Título</string>
    <string name="titulo_original">título original</string>
    <string name="lenguaje_original">Lenguaje original</string>
    <string name="fecha">fecha</string>
    <string name="sipnosis">Sipnosis</string>
    <string name="cast">cast</string>
    <string name="cast_principal">cast principal</string>
    <string name="fecha_finalizaci_n">Fecha finalización</string>
    <string name="temporadas">Temporadas</string>
    <string name="nombre">Nombre</string>
    <string name="personaje">Personaje:</string>
    <string name="genero">Genero:</string>
    <string name="imagen_portada">Imagen Portada</string>
    <string name="capitulos">Capitulos:</string>
    <string name="temporada">Temporada:</string>
    <string name="imagenposter">ImagenPoster</string>
    <string name="visto">Visto</string>
    <string name="foto_del_actor">foto del Actor</string>
    <string name="add_favorito">Add favorito</string>
    <string name="ir_a_buscar_pelis">Ir a buscar Pelis</string>
    <string name="ir_a_buscar_series">Ir a buscar series</string>
    <string name="ir_a_favoritos">Ir a favoritos</string>
    <string name="search">Search</string>
    <string name="ha_sido_visto">Ha sido visto</string>
</resources>