<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.buscaDetalladaSerie.BuscarSeriesDetallada">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.pelisyseriesapp.ui.buscarSeries.BuscarSeriesFragment">

        <ImageView
            android:id="@+id/ivPortadaDetallada"
            android:layout_width="182dp"
            android:layout_height="183dp"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/imagen_portada" />

        <TextView
            android:id="@+id/tvEtiquetaTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />


        <TextView
            android:id="@+id/tvEtiquetaTituloOriginal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_original"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline10" />

        <TextView
            android:id="@+id/tvEtiquetaLenguajeOriginal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lenguaje_original"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline11" />

        <TextView
            android:id="@+id/tvEtiquetaFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline12" />

        <TextView
            android:id="@+id/tvEtiquetaSipnosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sipnosis"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline13" />

        <TextView
            android:id="@+id/tvEtiquetaCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast_principal"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline14" />

        <TextView
            android:id="@+id/tvPonerTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />

        <TextView
            android:id="@+id/tvPonerTituloOriginal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline10" />

        <TextView
            android:id="@+id/tvPonerLenguajeOriginal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline11" />

        <TextView
            android:id="@+id/tvPonerFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline12" />

        <TextView
            android:id="@+id/tvPonerSipnosis"
            android:layout_width="263dp"
            android:layout_height="238dp"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline13" />

        <TextView
            android:id="@+id/tvEtiquetaFechaFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_finalizaci_n"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline17" />

        <TextView
            android:id="@+id/tvPonerFechaFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline17" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvActoresSeries"
            android:layout_width="401dp"
            android:layout_height="628dp"
            android:layout_marginTop="4dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline15"
            tools:listitem="@layout/item_actores_actuan" />

        <TextView
            android:id="@+id/tvEtiquetaTemporada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:text="@string/temporadas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvActoresSeries" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTemporadaCapitulos"
            android:layout_width="398dp"
            android:layout_height="625dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEtiquetaTemporada"
            tools:listitem="@layout/item_temporada" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="124dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="1433dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="222dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="256dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="285dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="323dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="380dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="630dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="654dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="134dp" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="351dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>