<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivPostTemporada"
        android:layout_width="69dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/imagenposter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline30"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvNombreTemporada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="asdfasf"
        app:layout_constraintStart_toStartOf="@+id/guideline32"
        app:layout_constraintTop_toTopOf="@+id/guideline31" />

    <TextView
        android:id="@+id/tvNumTemporada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvEtiquetaTemporada"
        app:layout_constraintTop_toTopOf="@+id/guideline33" />

    <TextView
        android:id="@+id/tvNumEpisodios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvEtiquetaCapt"
        app:layout_constraintTop_toBottomOf="@+id/tvNumTemporada" />

    <TextView
        android:id="@+id/tvSipnosis"
        android:layout_width="220dp"
        android:layout_height="143dp"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toTopOf="@+id/guideline31" />

    <TextView
        android:id="@+id/tvEtiquetaTemporada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temporada"
        app:layout_constraintStart_toStartOf="@+id/guideline32"
        app:layout_constraintTop_toTopOf="@+id/guideline33" />

    <TextView
        android:id="@+id/tvEtiquetaCapt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capitulos"
        app:layout_constraintStart_toStartOf="@+id/guideline32"
        app:layout_constraintTop_toBottomOf="@+id/tvEtiquetaTemporada" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="85dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="58dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="179dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="185dp" />


</androidx.constraintlayout.widget.ConstraintLayout>